# www-nurliman-dev

./: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .lefthook.yml  .npmrc  .postcssrc.json  .prettierignore  .prettierrc.json  LICENSE  README.md  astro.config.mjs  biome.json  bun.lockb  bunfig.toml  gulpfile.js  next.config.js  package.json  pnpm-lock.yaml  postcss.config.js  prettier.config.js  renovate.json  tsconfig.json  turbo.json
.changeset/: afraid-cities-rush.md  afraid-monkeys-join.md  better-lemons-sin.md  brave-turkeys-double.md  brown-wolves-doubt.md  chubby-carpets-grow.md  clear-drinks-drum.md  config.json  cool-results-vanish.md  cool-results-wear.md  cuddly-maps-join.md  cute-jobs-carry.md  cute-lions-taste.md  cute-rocks-check.md  dull-steaks-fall.md  eager-buttons-start.md  eager-webs-rhyme.md  eight-adults-tan.md  eight-experts-ask.md  fancy-bottles-build.md  fancy-clowns-hammer.md  fancy-experts-jog.md  fifty-walls-lose.md  five-rabbits-appear.md  floppy-ads-dream.md  floppy-papayas-joke.md  fluffy-horses-sip.md  four-cars-happen.md  fresh-beds-play.md  (+40 more)
services/message-sender/: .eslintrc.js  .gitignore  Cargo.toml  go.mod  go.sum  package.json  tsconfig.json  tsup.config.ts  wrangler.toml
services/message-sender/api/: index.go
services/message-sender/api/v0/: send.go
services/message-sender/src/: cors.rs  handler.ts  index.ts  lib.rs  router.ts  sendgrid_client.rs  types.ts
services/message-sender/src/handlers/: v0.rs
services/message-sender/src/handlers/v0/: options.rs  send.rs  send.ts
services/message-sender/utils/: utils.go
(+431 files in other folders)
