[package]
name = "message-sender"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = "1.0.137"
serde_json = "1.0.81"
validator = { version = "0.15.0", features = ["derive"] }
worker = "0.0.9"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"